--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -108,9 +108,9 @@ As <i>P</i> increases, there are two possible scenarios: either the box will "sl
 <Image src='/Statics/FrictionFigures/TipSlip.jpg' width='5'>tipping vs. slipping</Image>
 
 <p>
-If the box experiences <b>slipping</b>, the normal force will act at a location can be written as  <DisplayEquation equation="\\N = \mu P" />. You can solve for the force <i>P</i> required for the box to slip. 
+If the box experiences <b>slipping</b>, the normal force will act at a location can be written as  <DisplayEquation equation="\N = \\mu P" />. You can solve for the force <i>P</i> required for the box to slip. 
 
-If the box experiences <b>tipping</b>, the normal force will act at the bottom right corner of the box, and the couple from <DisplayEquation equation="\\F_f" /> and <i>N</i> will create a moment causing the box to tip. 
+If the box experiences <b>tipping</b>, the normal force will act at the bottom right corner of the box, and the couple from the frictional force and <i>N</i> will create a moment causing the box to tip. 
 
 To determine which of these scenarios will occur, you should write the equations of equilibrium for each case and solve for the force <i>P</i> required to cause either slipping or tipping. Whichever condition has the smallest force <i>P</i> will be the condition that occurs. 
 </p>
