--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -108,7 +108,7 @@ As <i>P</i> increases, there are two possible scenarios: either the box will "sl
 <Image src='/Statics/FrictionFigures/TipSlip.jpg' width='5'>tipping vs. slipping</Image>
 
 <p>
-If the box experiences <b>slipping</b>, the normal force will act at a location can be written as  <DisplayEquation equation="\N = \\mu P" />. You can solve for the force <i>P</i> required for the box to slip. 
+If the box experiences <b>slipping</b>, the normal force will act at a location can be written as  <DisplayEquation equation="\N = \\mu_s P" />. You can solve for the force <i>P</i> required for the box to slip. 
 </p>
 <p>
 If the box experiences <b>tipping</b>, the normal force will act at the bottom right corner of the box, and the couple from the frictional force and <i>N</i> will create a moment causing the box to tip. 
