--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -490,9 +490,10 @@ To solve for the centroid of an object:
 
 with similar equations for <InlineEquation equation="\\bar{y}" />. 
 
-<p>Example problem: Centroid of a curved area</p>
 
-<Image src='/Statics/COMFigures/CentroidEx.jpg' width='5'> </Image>
+<Example title="Centroid of a curved area">
+	<Image src='/Statics/COMFigures/CentroidEx.jpg' width='5'> </Image>
+</Example>
 
 </SubSection>
 </Layout>
