--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -118,13 +118,13 @@ To determine which of these scenarios will occur, you should write the equations
 </p>
 
 <p>
-<em>Note:</em> See below for an explanation of why the normal force does not act at the center of mass of the box.
+<em>Note:</em> 
 </p>
 <!-- From Lecture 27 -->
 
-     <Example title="Location of normal force">
-
-	<Image src='/Statics/FrictionFigures/NLocation.jpg' width='5'></Image>
+  <DisplayEquation title="Location of Normal Force" id="" background="True" equation="See the derivation below for an explanation of why the normal force does not act at the center of mass of the box." derivation="True">
+    <p>
+      <Image src='/Statics/FrictionFigures/NLocation.jpg' width='5'></Image>
 
         <p>
           If the normal force <i>N</i> acted at the middle of the box (at the center of mass), we would write the three equations of equilibrium as follows: 
@@ -142,8 +142,9 @@ To determine which of these scenarios will occur, you should write the equations
 	The sum of moments equation about point O results in an expression that is not possible: we know that <i>P</> cannot be zero, so there must be some sort of moment about the center of the box from the normal force acting offset from the center of mass of the box. 
 
         </p>
+    </p>
+  </DisplayEquation>
 
-      </Example>
 
 
 </SubSection>
