--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -118,11 +118,11 @@ To determine which of these scenarios will occur, you should write the equations
 </p>
 
 <p>
-<em>Note:</em> 
+<em>Note:</em> See the derivation below for an explanation of why the normal force does not act at the center of mass of the box.
 </p>
 <!-- From Lecture 27 -->
 
-  <DisplayEquation title="Location of Normal Force" id="" background="True" equation="See the derivation below for an explanation of why the normal force does not act at the center of mass of the box." derivation="True">
+  <DisplayEquation title="Location of Normal Force" id="" background="True" equation="" derivation="True">
     <p>
       <Image src='/Statics/FrictionFigures/NLocation.jpg' width='5'></Image>
 
