--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -122,7 +122,7 @@ To determine which of these scenarios will occur, you should write the equations
 </p>
 <!-- From Lecture 27 -->
 
-  <DisplayEquation title="Location of Normal Force" id="" background="True" equation="" derivation="True">
+  <DisplayEquation title="Location of Normal Force: Derivation" id="" background="True" equation="" derivation="True">
     <p>
       <Image src='/Statics/FrictionFigures/NLocation.jpg' width='5'></Image>
 
