--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -34,7 +34,7 @@ Friction is a force that resists the movement of two contacting surfaces sliding
 </p>
 
 
-<DisplayEquation equation="F \\le  \\mu F" background="True"  title="Limit on friction force magnitude." />
+<DisplayEquation equation="F \\le  \\mu N" background="True"  title="Limit on friction force magnitude." />
 
 <p>
 	Variables <b> <InlineEquation equation=" F "/> </b> and <b> <InlineEquation equation=" N "/> </b> are the magnitude of the friction for <b> <InlineEquation equation=" \\vec{F} "/> </b> and the normal force <b> <InlineEquation equation=" \\vec{N} "/> </b>, and <b> <InlineEquation equation=" \\mu "/> </b> is the coefficient of friction.
@@ -123,13 +123,14 @@ To determine which of these scenarios will occur, you should write the equations
 <!-- From Lecture 27 -->
 
   <DisplayEquation title="Location of Normal Force: Derivation" id="" background="True" equation="" derivation="True">
-    <p>
+    
       <Image src='/Statics/FrictionFigures/NLocation.jpg' width='5'></Image>
 
         <p>
           If the normal force <i>N</i> acted at the middle of the box (at the center of mass), we would write the three equations of equilibrium as follows: 
 	</p>
-          <DisplayEquation equation="\\sum F_x = P - F_f = 0" />
+         
+	  <DisplayEquation equation="\\sum F_x = P - F_f = 0" />
 	  <DisplayEquation equation="\\sum F_y = N - W = 0" />
 	
 	<p>
@@ -142,7 +143,7 @@ To determine which of these scenarios will occur, you should write the equations
 	The sum of moments equation about point O results in an expression that is not possible: we know that <i>P</> cannot be zero, so there must be some sort of moment about the center of the box from the normal force acting offset from the center of mass of the box. 
 
         </p>
-    </p>
+    
   </DisplayEquation>
 
 
