--- a/src/pages/sta/internal_forces.astro
+++ b/src/pages/sta/internal_forces.astro
@@ -98,7 +98,8 @@ The general procedures for creating shear / bending moment diagrams are:</p>
 <SubSection title="General Rules" id="general_rules">
 
 <Enumerate>
-	<Item>When there is an external concentrated force or moment, there will be a "jump" in the shear force or bending moment diagram. Upward forces lead to an upward jump in \(V\), and clockwise external moments result in a jump "up" in the graph of \(M\).
+	<Item>When there is an external concentrated force or moment, there will be a "jump" in the shear force or bending moment diagram. 
+		Upward forces lead to an upward jump in \(V\) equal to the magnitude of the concentrated external force, and clockwise external moments result in a jump "up" in the graph of \(M\) equal to the magnitude of the concentrated external moment.
     </Item>
 	<Item>\(w(x)\), \(V\), and \(M\) are related via the following relationship: </Item>
 </Enumerate>
