--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -88,7 +88,7 @@ Examples of coefficients of static friction:
     <CalloutContainer slot="cards">
         <CalloutCard title="Did you know?">
             <p>
-                Articular cartilage lines the end of your bones at joints, where two bones come together in your body. It acts as a smooth surface that allows your bones to slide past each other when your body is moving. 
+                <a href="https://en.wikipedia.org/wiki/Hyaline_cartilage#Articular_cartilage" Articular cartilage</a> lines the end of your bones at joints, where two bones come together in your body. It acts as a smooth surface that allows your bones to slide past each other when your body is moving. 
               </p>
 		
               <p>
