--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -46,7 +46,7 @@ Consider a box with applied load P and weight W sitting on a rough surface. The 
 <Image src='/Statics/FrictionFigures/FGraph.jpg' width='5'></Image>
 
 <p>
-With a very small applied load, the box won't move. However, at some point, with a large anough load, the box will start to slide along the surface. 
+With a very small applied load, the box won't move. However, at some point, with a large enough load, the box will start to slide along the surface. 
 </p>
 
 <p>
@@ -136,7 +136,7 @@ To determine which of these scenarios will occur, you should write the equations
 </p>
 <!-- From Lecture 27 -->
 
-  <DisplayEquation title="Location of Normal Force: Derivation" id="" background="True" equation="" derivation="True">
+  <DisplayEquation title="Location of Normal Force: Derivation" id="nfl" background="True" equation="" derivation="True">
     
       <Image src='/Statics/FrictionFigures/NLocation.jpg' width='5'></Image>
 
