--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -33,25 +33,30 @@ import Example from "../../components/Example.astro"
 Friction is a force that resists the movement of two contacting surfaces sliding relative to each other. Frictional forces act tangential to the surface at the point of contact and act in opposition to the possible or existing motion between the surfaces. 
 </p>
 
-<DisplayEquation equation="F \\le  \\mu N" background="True"  title="Limit on friction force magnitude." />
-
 <p>
 	Variables <b> <InlineEquation equation=" F "/> </b> and <b> <InlineEquation equation=" N "/> </b> are the magnitude of the friction for <b> <InlineEquation equation=" \\vec{F} "/> </b> and the normal force <b> <InlineEquation equation=" \\vec{N} "/> </b>, and <b> <InlineEquation equation=" \\mu "/> </b> is the coefficient of friction.
 </p>
 
 <p>
-Consider a box with applied load P and weight W sitting on a rough surface. The box has normal force N and frictional force F_f opposing the motion of the box: 
+Consider a box with applied load P and weight W sitting on a rough surface. The box has normal force <InlineEquation equation=" N "/> and frictional force <InlineEquation equation=" F_f "/> opposing the motion of the box: 
 </p>
 
 <Image src='/Statics/FrictionFigures/FGraph.jpg' width='5'></Image>
 
 <p>
-With a very small applied load, the box won't move. However, at some point, with a large enough load, the box will start to slide along the surface. 
+With a very small applied load, the box won't move. However, at some point, with a large enough <InlineEquation equation=" P "/>, the box will start to slide along the surface. 
 </p>
 
 <p>
-Writing the equations of equilibrium of the box and solving for P results in  
+Writing the equations of equilibrium of the box and solving for <InlineEquation equation=" P "/> results in <InlineEquation equation=" P = F_f "/>. As the applied load increased, the frictional force will also increase. 
+This is indicated by the straight line on the <InlineEquation equation=" F_f "/> vs. <InlineEquation equation=" P "/> graph. Once the frictional force reaches a maximum, the box will begin to slide on the surface. 
 </p>
+
+<p>
+The maximum frictional force is written as: 
+</p>
+
+<DisplayEquation equation="F_f \\le  \\mu_s N" background="True"  title="Limit on static friction force magnitude." />
 
 </Section>
 
