--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -31,10 +31,7 @@ import Example from "../../components/Example.astro"
 
 <p>
 Friction is a force that resists the movement of two contacting surfaces sliding relative to each other. Frictional forces act tangential to the surface at the point of contact and act in opposition to the possible or existing motion between the surfaces. 
-</p>
-
-<p>
-	Variables <b> <InlineEquation equation=" F "/> </b> and <b> <InlineEquation equation=" N "/> </b> are the magnitude of the friction for <b> <InlineEquation equation=" \\vec{F} "/> </b> and the normal force <b> <InlineEquation equation=" \\vec{N} "/> </b>, and <b> <InlineEquation equation=" \\mu "/> </b> is the coefficient of friction.
+In TAM 210/211, we will focus on dry friction. Dry friction occurs between two surfaces with <strong>no</strong> lubricating fluid between them. 
 </p>
 
 <p>
@@ -53,16 +50,18 @@ This is indicated by the straight line on the <InlineEquation equation=" F_f "/>
 </p>
 
 <p>
-The maximum frictional force is written as: 
+The maximum static frictional force is written as: 
 </p>
 
 <DisplayEquation equation="F_f \\le  \\mu_s N" background="True"  title="Limit on static friction force magnitude." />
 
+<p>
+	Variables <b> <InlineEquation equation=" F_f "/> </b> and <b> <InlineEquation equation=" N "/> </b> are the magnitude of the friction for <b> <InlineEquation equation=" \\vec{F} "/> </b> and the normal force <b> <InlineEquation equation=" \\vec{N} "/> </b>, and <b> <InlineEquation equation=" \\mu_s "/> </b> is the coefficient of static friction.
+</p>
+
 </Section>
 
 <SubSection title="Static Friction" id="static_friction">
-
-In TAM 210/211, we will focus on dry friction. Dry friction occurs between two surfaces with <strong>no</strong> lubricating fluid between them. 
 
 Static friction is the friction between two bodies when there is no movement between them.
 
