--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -35,7 +35,7 @@ In TAM 210/211, we will focus on dry friction. Dry friction occurs between two s
 </p>
 
 <p>
-Consider a box with applied load P and weight W sitting on a rough surface. The box has normal force <InlineEquation equation=" N "/> and frictional force <InlineEquation equation=" F_f "/> opposing the motion of the box: 
+Consider a box with applied load <InlineEquation equation=" P "/> and weight <InlineEquation equation=" W "/> sitting on a rough surface. The box has normal force <InlineEquation equation=" N "/> and frictional force <InlineEquation equation=" F_f "/> opposing the motion of the box: 
 </p>
 
 <Image src='/Statics/FrictionFigures/FGraph.jpg' width='5'></Image>
@@ -164,7 +164,9 @@ To determine which of these scenarios will occur, you should write the equations
     
   </DisplayEquation>
 
-
+<Example title="Frictional forces on a fridge: Slipping and Tipping">
+	
+</Example>
 
 </SubSection>
 
