--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -170,6 +170,13 @@ To determine which of these scenarios will occur, you should write the equations
 
 	<Image src='/Statics/FrictionFigures/FridgeEx.jpg' width='5'></Image>
 
+	<div slot="solution">
+	<p> Drawing a FBD of the fridge yields: </p>
+
+	<Image src='/Statics/FrictionFigures/FridgeFBD.jpg' width='5'></Image>
+
+	</div>
+
 </Example>
 
 </SubSection>
