--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -175,6 +175,10 @@ To determine which of these scenarios will occur, you should write the equations
 
 	<Image src='/Statics/FrictionFigures/FridgeFBD.jpg' width='5'></Image>
 
+	<p> We will then use the FBD and equations of equilibrium to solve for the force <InlineEquation equation=" P "/> necessary to make the firdge tip, and make the firdge slip along the surface: </p>
+
+	<Image src='/Statics/FrictionFigures/FridgeSln.jpg' width='5'></Image>
+
 	</div>
 
 </Example>
