--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -166,7 +166,7 @@ To determine which of these scenarios will occur, you should write the equations
 
 <Example title="Frictional forces on a fridge: Slipping and Tipping">
 	<p> <b>Given:</b> Fridge weight = 250 lb and <InlineEquation equation=" \\mu_s "/> = 0.4 </p>
-	<p> <b>Find:</b>  The maximum horizontal force P that can be applied without causing movement of the crate </p>
+	<p> <b>Find:</b>  The maximum horizontal force P that can be applied without causing movement of the fridge </p>
 
 	<Image src='/Statics/FrictionFigures/FridgeEx.jpg' width='5'></Image>
 
