--- a/src/pages/sta/internal_forces.astro
+++ b/src/pages/sta/internal_forces.astro
@@ -106,6 +106,42 @@ The general procedures for creating shear / bending moment diagrams are:</p>
 
 <Image src='/Statics/IntForceFigures/IntDerivRelationships.jpg' width='5'>Relationships between \(w(x)\), \(V\), and \(M\).</Image>
 
+<DisplayTable id="moi_table">
+    <thead>
+        <tr>
+            <th class="nosideborderleft">
+		<strong>Diagram</strong>
+            </th>
+            <th>
+                <strong>Discontinuities</strong>
+            </th>
+            <th class="table-shaded"> 
+                <strong>Slope</strong>
+            </th>
+	    <th class="table-shaded"> 
+                <strong>Area</strong>
+            </th>	
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td class="nosideborderleft">
+                <strong>Shear</strong>
+            </td>
+            <td>
+		A concentrated force results in a discontinuity/jump in V . An upward (downward) force causes an upward (downward) jump. The magnitude of the jump is equal to the force magnitude. Concentrated moments have no effect on the shear diagram.
+            </td>
+	    <td>
+       		The slope of V at a point is equal to the value of the distributed load at that point. An upward (downward) distributed load results in a positive (negative) slope.
+	    </td>
+	    <td>
+		Change is shear between two points is equal to the area under the curve between the two points.
+	    </td>
+        </tr>
+    </tbody>
+</DisplayTable>
+
+
 </SubSection>
 
 </Layout>
