--- a/src/pages/sta/internal_forces.astro
+++ b/src/pages/sta/internal_forces.astro
@@ -112,7 +112,7 @@ The general procedures for creating shear / bending moment diagrams are:</p>
             <th class="table-shaded">
 		<strong>Diagram</strong>
             </th>
-            <the class="table-shaded">
+            <th class="table-shaded">
                 <strong>Discontinuities</strong>
             </th>
             <th class="table-shaded"> 
@@ -129,13 +129,15 @@ The general procedures for creating shear / bending moment diagrams are:</p>
                 <strong>Shear (<InlineEquation equation="V"/>) </strong>
             </td>
             <td>
-		A concentrated force results in a discontinuity/jump in <InlineEquation equation="V"/> . An upward (downward) force causes an upward (downward) jump. The magnitude of the jump is equal to the force magnitude. Concentrated moments do not affect the shear diagram.
+		A concentrated force results in a discontinuity/jump in <InlineEquation equation="V"/>. An upward (downward) force causes an upward (downward) jump. The magnitude of the jump is equal to the force magnitude. 
+
+		Concentrated moments do not affect the shear diagram.
             </td>
 	    <td>
        		The slope of <InlineEquation equation="V"/> at a point is equal to the value of the distributed load at that point. An upward (downward) distributed load results in a positive (negative) slope.
 	    </td>
 	    <td>
-		The Change in shear between two points is equal to the area under the distributed loading curve between the two points.
+		The change in shear between two points is equal to the area under the distributed loading curve between the two points.
 	    </td>
         </tr>
     </tbody>
