--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -45,7 +45,7 @@ With a very small applied load, the box won't move. However, at some point, with
 </p>
 
 <p>
-Writing the equations of equilibrium of the box and solving for <InlineEquation equation=" P "/> results in <InlineEquation equation=" P = F_f "/>. As the applied load increased, the frictional force will also increase. 
+Writing the equations of equilibrium of the box and solving for <InlineEquation equation=" P "/> results in <InlineEquation equation=" P = F_f "/>. As the applied load increases, the frictional force will also increase. 
 This is indicated by the straight line on the <InlineEquation equation=" F_f "/> vs. <InlineEquation equation=" P "/> graph. Once the frictional force reaches a maximum, the box will begin to slide on the surface. 
 </p>
 
@@ -56,7 +56,7 @@ The maximum static frictional force is written as:
 <DisplayEquation equation="F_f \\le  \\mu_s N" background="True"  title="Limit on static friction force magnitude." />
 
 <p>
-	Variables <b> <InlineEquation equation=" F_f "/> </b> and <b> <InlineEquation equation=" N "/> </b> are the magnitude of the friction for <b> <InlineEquation equation=" \\vec{F} "/> </b> and the normal force <b> <InlineEquation equation=" \\vec{N} "/> </b>, and <b> <InlineEquation equation=" \\mu_s "/> </b> is the coefficient of static friction.
+	Variables <b> <InlineEquation equation=" F_f "/> </b> and <b> <InlineEquation equation=" N "/> </b> are the magnitude of the friction force <b> <InlineEquation equation=" \\vec{F_f} "/> </b> and the normal force <b> <InlineEquation equation=" \\vec{N} "/> </b>, and <b> <InlineEquation equation=" \\mu_s "/> </b> is the coefficient of static friction.
 </p>
 
 </Section>
