--- a/src/pages/sta/internal_forces.astro
+++ b/src/pages/sta/internal_forces.astro
@@ -7,6 +7,7 @@ import BlueText from "../../components/BlueText.astro"
 import RedText from "../../components/RedText.astro" 
 import InlineEquation from "../../components/InlineEquation.astro" 
 import Enumerate from "../../components/Enumerate.astro"
+import Itemize from "../../components/Itemize.astro"
 import CalloutContainer from "../../components/CalloutContainer.astro"
 import CalloutCard from "../../components/CalloutCard.astro"
 import Item from "../../components/Item.astro"
@@ -98,10 +99,13 @@ The general procedures for creating shear / bending moment diagrams are:</p>
 <SubSection title="General Rules" id="general_rules">
 
 <Enumerate>
-	<Item>When there is an external concentrated force or moment, there will be a "jump" in the shear force or bending moment diagram. 
-		Upward forces lead to an upward jump in \(V\) equal to the magnitude of the concentrated external force, and clockwise external moments result in a jump "up" in the graph of \(M\) equal to the magnitude of the concentrated external moment.
-    </Item>
-	<Item>\(w(x)\), \(V\), and \(M\) are related via the following relationship: </Item>
+	<Item><strong>Concentrated force or moment: </strong>  there will be a "jump" in the shear force or bending moment diagram.</Item>
+        <Itemize>
+            <Item>Upward forces lead to an upward jump in \(V\) equal to the magnitude of the concentrated external force. </Item>
+            <Item>Clockwise external moments result in a jump "up" in the graph of \(M\) equal to the magnitude of the concentrated external moment.</Item>       
+        </Itemize>
+        
+	<Item><strong>Distributed loads:</strong> \(w(x)\), \(V\), and \(M\) are related via the following relationship: </Item>
 </Enumerate>
 
 <Image src='/Statics/IntForceFigures/IntDerivRelationships.jpg' width='5'>Relationships between \(w(x)\), \(V\), and \(M\).</Image>
@@ -119,14 +123,14 @@ The general procedures for creating shear / bending moment diagrams are:</p>
                 <strong>Slope</strong>
             </th>
 	    <th class="table-shaded"> 
-                <strong>Area</strong>
+                <strong>Changes</strong>
             </th>	
         </tr>
     </thead>
     <tbody>
         <tr>
             <td class="nosideborderleft">
-                <strong>Shear (<InlineEquation equation="V"/>) </strong>
+                <strong>Shear <InlineEquation equation="(V)"/> </strong>
             </td>
             <td>
 		A concentrated force results in a discontinuity/jump in <InlineEquation equation="V"/>. An upward (downward) force causes an upward (downward) jump. The magnitude of the jump is equal to the force magnitude. 
@@ -144,7 +148,7 @@ The general procedures for creating shear / bending moment diagrams are:</p>
     <tbody>
         <tr>
             <td class="nosideborderleft">
-                <strong>Moment (<InlineEquation equation="M"/>) </strong>
+                <strong>Moment <InlineEquation equation="(M)"/> </strong>
             </td>
             <td>
 		A concentrated moment results in a discontinuity/jump in <InlineEquation equation="M"/>. A clockwise (anti-clockwise) moment causes an upward (downward) jump. The magnitude of the jump is equal to the moment magnitude.
